# 120fps-method

./: .gitignore  CMakeLists.txt  README.md  hovereventfilter.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
fonts/: OFL
images/: placeholder.txt
translations/: language_en.ts  language_ru.ts
